change the homepage name

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monsters-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://marcosihe.github.io/monstersApp",
+  "homepage": "https://marcosihe.github.io/monsters-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
